Update on footer

--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
                         </footer>
                         
                          <footer id="watermark" class="text-center text-xs text-gray-400 font-light pt-8">
-                            <p>We look forward to the possibility of partnering with you. Discover helpful resources and see our work in action by visiting us online at www.jmcaballes.life</p>
+                            <p>Disclaimer: This is just a sample proposal and does not reflect the complete benefits, inclusions, terms and conditions of the product.</p>
                         </footer>
                     </div>
                 </div>
