Easylink Coverage update

--- a/index.html
+++ b/index.html
@@ -2362,8 +2362,10 @@ function toggleProgramLock(isLocked) {
                     const projectedLIC = Math.max(componentA, componentB);
                     
                     let benefits = [
-                        { name: "Initial Coverage (Non-Accidental)", value: `Fund Value + Charges` },
-                        { name: "Initial Coverage (Accidental)", value: `₱${formatNumberInt(prem.annual * 5)}` },
+                        { name: "Coverage Yr 1-2  (Non-Accidental)", value: `Fund Value + Charges` },
+                        { name: "Coverage Yr 1-2 (Accidental)", value: `₱${formatNumberInt(prem.annual * 5)}` },
+                        { name: "Coverage Yr 3-4 ", value: `at least ₱${formatNumberInt(prem.annual * 5)}` },
+                        { name: "Coverage Yr 5 onwards ", value: `at least ₱${formatNumberInt((prem.annual * 5)*125%)}` },
                         { name: `Projected Life Insurance at Age ${projectionAge}`, value: `₱${formatNumberInt(projectedLIC)}` }
                     ];
                     
@@ -2406,8 +2408,10 @@ function toggleProgramLock(isLocked) {
                     const projectedLIC = Math.max(componentA, componentB);
 
                     let benefits = [
-                         { name: "Initial Coverage (Non-Accidental)", value: `Fund Value + Charges` },
-                        { name: "Initial Coverage (Accidental)", value: `₱${formatNumberInt(prem.annual * 5)}` },
+                        { name: "Coverage Yr 1-2  (Non-Accidental)", value: `Fund Value + Charges` },
+                        { name: "Coverage Yr 1-2 (Accidental)", value: `₱${formatNumberInt(prem.annual * 5)}` },
+                        { name: "Coverage Yr 3-9 ", value: `at least ₱${formatNumberInt(prem.annual * 5)}` },
+                        { name: "Coverage Yr 10 onwards ", value: `at least ₱${formatNumberInt((prem.annual * 10)*125%)}` },
                         { name: `Projected Life Insurance at Age ${projectionAge}`, value: `₱${formatNumberInt(projectedLIC)}` }
                     ];
 
