--- a/index.html
+++ b/index.html
@@ -2365,7 +2365,7 @@ function toggleProgramLock(isLocked) {
                         { name: "Coverage Yr 1-2  (Non-Accidental)", value: `Fund Value + Charges` },
                         { name: "Coverage Yr 1-2 (Accidental)", value: `₱${formatNumberInt(prem.annual * 5)}` },
                         { name: "Coverage Yr 3-4 ", value: `at least ₱${formatNumberInt(prem.annual * 5)}` },
-                        { name: "Coverage Yr 5 onwards ", value: `at least ₱${formatNumberInt((prem.annual * 5)*125%)}` },
+                        { name: "Coverage Yr 5 onwards ", value: `at least ₱${formatNumberInt((prem.annual * 5)*1.25)}` },
                         { name: `Projected Life Insurance at Age ${projectionAge}`, value: `₱${formatNumberInt(projectedLIC)}` }
                     ];
                     
@@ -2411,7 +2411,7 @@ function toggleProgramLock(isLocked) {
                         { name: "Coverage Yr 1-2  (Non-Accidental)", value: `Fund Value + Charges` },
                         { name: "Coverage Yr 1-2 (Accidental)", value: `₱${formatNumberInt(prem.annual * 5)}` },
                         { name: "Coverage Yr 3-9 ", value: `at least ₱${formatNumberInt(prem.annual * 5)}` },
-                        { name: "Coverage Yr 10 onwards ", value: `at least ₱${formatNumberInt((prem.annual * 10)*125%)}` },
+                        { name: "Coverage Yr 10 onwards ", value: `at least ₱${formatNumberInt((prem.annual * 10)*1.25)}` },
                         { name: `Projected Life Insurance at Age ${projectionAge}`, value: `₱${formatNumberInt(projectedLIC)}` }
                     ];
 
