Batch 1 Update Nov 15, 8PM

--- a/index.html
+++ b/index.html
@@ -12835,6 +12835,10 @@ function toggleProgramLock(isLocked) {
             { name: "Reinalyn Cobilla", mobile: "0938 474 2191", email: "reinalyn.a.cobilla@sunlife.com.ph", code: "160439" },
             { name: "Morella Lyn Atondag", mobile: "0950 842 5539", email: "morellalyn.h.atondag@sunlife.com.ph", code: "160686" },
             { name: "Ella Rose Aspa", mobile: "0965 683 3338", email: "ellarose.a.aspa@sunlife.com.ph", code: "163270" },
+            { name: "Warren Garcia", mobile: "0917 126 9068", email: "warren.m.garcia@sunlife.com.ph", code: "116819" },
+            { name: "Gideon Luke Ty", mobile: "0916 520 9152", email: "gideonluke.p.ty@sunlife.com.ph", code: "138542" },
+            { name: "Jocelyn Rodavia", mobile: "0976 573 3926", email: "jocelyn.y.rodavia@sunlife.com.ph", code: "152441" },
+            { name: "Mark Albert G. Raqueño", mobile: "0953 830 1168", email: "markalbert.g.raqueno@sunlife.com.ph", code: "147623" },
             { name: "Jhary Nel Tabal", mobile: "0928 146 2395", email: "jharynel.m.tabal@sunlife.com.ph", code: "163271" }
         ];
 /*
