--- a/index.html
+++ b/index.html
@@ -12839,6 +12839,15 @@ function toggleProgramLock(isLocked) {
             { name: "Gideon Luke Ty", mobile: "0916 520 9152", email: "gideonluke.p.ty@sunlife.com.ph", code: "138542" },
             { name: "Jocelyn Rodavia", mobile: "0976 573 3926", email: "jocelyn.y.rodavia@sunlife.com.ph", code: "152441" },
             { name: "Mark Albert G. Raqueño", mobile: "0953 830 1168", email: "markalbert.g.raqueno@sunlife.com.ph", code: "147623" },
+            { name: "Derick Allosada", mobile: "09544556162", email: "derick.romeos@gmail.com", code: "165199" },
+            { name: "Myrasol C. Ybañez ", mobile: "09352903917", email: "ybanezmyrasol07@gmail.com", code: "162339" },
+            { name: "Amie Bacayan", mobile: "09071632951", email: "bacayanamie@gmail.com", code: "09071632951" },
+            { name: "Rhadge Christine B. Valdez", mobile: "09673584569", email: "rhadgechristine.b.valdez@sunlife.com.ph", code: "162338" },
+            { name: "Jhe-ann Bilugan ", mobile: "0965 653 9782", email: "jheann.s.bilugan@sunlife.com.ph", code: "141115" },
+            { name: "Editha Bocalan", mobile: "0908 319 5022", email: "editha.p.bocalan@sunlife.com.ph", code: "166414" },
+            { name: "Regine Mae Pascual", mobile: "0968 768 5096", email: "reginemae.r.pascual@sunlife.com.ph", code: "166053" },
+            { name: "Amie Bacayan", mobile: "0907 163 2951", email: "amie.b.bacayan@sunlife.com.ph", code: "09071632951" },
+            { name: "Mary Grace Mesina", mobile: "0961 996 0565", email: "marygrace.v.mesina@sunlife.com.ph", code: "09619960565" },
             { name: "Jhary Nel Tabal", mobile: "0928 146 2395", email: "jharynel.m.tabal@sunlife.com.ph", code: "163271" }
         ];
 /*
