--- a/index.html
+++ b/index.html
@@ -12847,6 +12847,18 @@ function toggleProgramLock(isLocked) {
             { name: "Regine Mae Pascual", mobile: "0968 768 5096", email: "reginemae.r.pascual@sunlife.com.ph", code: "166053" },
             { name: "Amie Bacayan", mobile: "0907 163 2951", email: "amie.b.bacayan@sunlife.com.ph", code: "09071632951" },
             { name: "Mary Grace Mesina", mobile: "0961 996 0565", email: "marygrace.v.mesina@sunlife.com.ph", code: "09619960565" },
+            { name: "Daryl Saavedra", mobile: "0962 827 9312", email: "daryl.g.saavedra@sunlife.com.ph", code: "150149" },
+            { name: "Sherrly Jamet", mobile: "0949 149 9550", email: "sherrly.b.jamet@sunlife.com.ph", code: "160863" },
+            { name: "Rhadge Christine Valdez", mobile: "0967 358 4569", email: "rhadgechristine.b.valdez@sunlife.com.ph", code: "162338" },
+            { name: "Maria Cecilia Nazareno ", mobile: "0920 696 9855", email: "mariacecilia.j.nazareno@sunlife.com.ph", code: "162643" },
+            { name: "Philip Earl Dela Cruz", mobile: "0976 045 8255", email: "philipearl.a.delacruz@sunlife.com.ph", code: "159740" },
+            { name: "Diana May David", mobile: "0945 446 5675", email: "dianamay.s.david@sunlife.com.ph", code: "165117" },
+            { name: "Myrasol Ybañez ", mobile: "0935 290 3917", email: "myrasol.c.ybanez@sunlife.com.ph", code: "162339" },
+            { name: "Charlene Satimbre", mobile: "0965 560 9959", email: "charlene.s.satimbre@sunlife.com.ph", code: "161143" },
+            { name: "Alyssa Joy Sendevia", mobile: "0953 219 3036", email: "alyzzaanglo@gmail.com", code: "09532193036" },
+            { name: "Jenilyn Lachico", mobile: "0960 695 6698", email: "jenilyn.u.lachico@sunlife.com.ph", code: "165119" },
+            { name: "Hairo Jay Miranda", mobile: "0919 813 2054", email: "hairojay.a.miranda@sunlife.com.ph", code: "155826" },
+            { name: "Ruel Nicol Jr", mobile: "0921 889 1473", email: "ruel.v.nicoljr@sunlife.com.ph", code: "154756" },
             { name: "Jhary Nel Tabal", mobile: "0928 146 2395", email: "jharynel.m.tabal@sunlife.com.ph", code: "163271" }
         ];
 /*
