--- a/index.html
+++ b/index.html
@@ -12859,6 +12859,8 @@ function toggleProgramLock(isLocked) {
             { name: "Jenilyn Lachico", mobile: "0960 695 6698", email: "jenilyn.u.lachico@sunlife.com.ph", code: "165119" },
             { name: "Hairo Jay Miranda", mobile: "0919 813 2054", email: "hairojay.a.miranda@sunlife.com.ph", code: "155826" },
             { name: "Ruel Nicol Jr", mobile: "0921 889 1473", email: "ruel.v.nicoljr@sunlife.com.ph", code: "154756" },
+            { name: "Francis Adrian Sarte", mobile: "0977 031 1610", email: "francisadrian.d.sarte@sunlife.com.ph", code: "139384" },
+            { name: "Dana Jemela Cabueñas ", mobile: "0977 031 1610", email: "danajemela.j.cabuenas@sunlife.com.ph", code: "154242" },
             { name: "Jhary Nel Tabal", mobile: "0928 146 2395", email: "jharynel.m.tabal@sunlife.com.ph", code: "163271" }
         ];
 /*
