--- a/index.html
+++ b/index.html
@@ -12861,6 +12861,7 @@ function toggleProgramLock(isLocked) {
             { name: "Ruel Nicol Jr", mobile: "0921 889 1473", email: "ruel.v.nicoljr@sunlife.com.ph", code: "154756" },
             { name: "Francis Adrian Sarte", mobile: "0977 031 1610", email: "francisadrian.d.sarte@sunlife.com.ph", code: "139384" },
             { name: "Dana Jemela Cabueñas ", mobile: "0955 026 8889", email: "danajemela.j.cabuenas@sunlife.com.ph", code: "154242" },
+            { name: "Jayvie Dimailig", mobile: "0998 906 8309", email: "jayvie.s.dimailig@sunlife.com.ph", code: "144719" },
             { name: "Jhary Nel Tabal", mobile: "0928 146 2395", email: "jharynel.m.tabal@sunlife.com.ph", code: "163271" }
         ];
 /*
