--- a/index.html
+++ b/index.html
@@ -12898,6 +12898,7 @@ function toggleProgramLock(isLocked) {
             { name: "Francis Adrian Sarte", mobile: "0977 031 1610", email: "francisadrian.d.sarte@sunlife.com.ph", code: "139384" },
             { name: "Dana Jemela Cabueñas ", mobile: "0955 026 8889", email: "danajemela.j.cabuenas@sunlife.com.ph", code: "154242" },
             { name: "Jayvie Dimailig", mobile: "0998 906 8309", email: "jayvie.s.dimailig@sunlife.com.ph", code: "144719" },
+            { name: "Jeran Miguel Chua", mobile: "0977 026 3011", email: "jeranmiguel.g.chua@sunlife.com.ph", code: "139618" },
             { name: "Jhary Nel Tabal", mobile: "0928 146 2395", email: "jharynel.m.tabal@sunlife.com.ph", code: "163271" }
         ];
 /*
