--- a/index.html
+++ b/index.html
@@ -12899,6 +12899,8 @@ function toggleProgramLock(isLocked) {
             { name: "Dana Jemela Cabueñas ", mobile: "0955 026 8889", email: "danajemela.j.cabuenas@sunlife.com.ph", code: "154242" },
             { name: "Jayvie Dimailig", mobile: "0998 906 8309", email: "jayvie.s.dimailig@sunlife.com.ph", code: "144719" },
             { name: "Jeran Miguel Chua", mobile: "0977 026 3011", email: "jeranmiguel.g.chua@sunlife.com.ph", code: "139618" },
+            { name: "Marianne Dominique Teng Guevarra", mobile: "09162597846", email: "mariannedominique.t.guevarra@sunlife.com.ph", code: "147180" },
+            { name: "Ailene Castillo", mobile: "0967 418 2622", email: "ailenecastillo04@gmail.com", code: "135217" },
             { name: "Jhary Nel Tabal", mobile: "0928 146 2395", email: "jharynel.m.tabal@sunlife.com.ph", code: "163271" }
         ];
 /*
