--- a/index.html
+++ b/index.html
@@ -12901,6 +12901,7 @@ function toggleProgramLock(isLocked) {
             { name: "Jeran Miguel Chua", mobile: "0977 026 3011", email: "jeranmiguel.g.chua@sunlife.com.ph", code: "139618" },
             { name: "Marianne Dominique Teng Guevarra", mobile: "09162597846", email: "mariannedominique.t.guevarra@sunlife.com.ph", code: "147180" },
             { name: "Ailene Castillo", mobile: "0967 418 2622", email: "ailenecastillo04@gmail.com", code: "135217" },
+            { name: "Joan R. Paderon", mobile: "0993 410 1558", email: "paderonjoan024@gmail.com", code: "160685" },
             { name: "Jhary Nel Tabal", mobile: "0928 146 2395", email: "jharynel.m.tabal@sunlife.com.ph", code: "163271" }
         ];
 /*
